package utils;

/**
 * Types of endianness
 */
public enum Endianness {
    BIG_ENNDIAN,
    LITTLE_ENDIAN
}