@startuml

title __UTILS's Class Diagram__\n

  namespace utils {
    class utils.ComUtils {
        - dataInputStream : DataInputStream
        - dataOutputStream : DataOutputStream
        + ComUtils()
        + readByte()
        + readHash()
        + readInt32()
        + readString()
        + writeByte()
        + writeHash()
        + writeHashArray()
        + writeInt32()
        + writeString()
        - bytesToInt32()
        - int32ToBytes()
        - readBytes()
    }
  }
  

  namespace utils {
    class utils.Datagram {
        + Datagram()
        + readHash()
        + readIntString()
        + readString()
        + writeHash()
        + writeHashArray()
        + writeIntString()
        + writeString()
    }
  }
  

  namespace utils {
    enum Endianness {
      BIG_ENNDIAN
      LITTLE_ENDIAN
    }
  }
  

  namespace utils {
    class utils.SocketMock {
        - bytes : List<Byte>
        + getInputStream()
        + getOutputStream()
    }
  }
  

  utils.Datagram -up-|> utils.ComUtils
  utils.SocketMock -up-|> java.net.Socket


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
